# em_benchmarks

./: CMakeLists.txt  README.md
examples/: linker_script.ld
examples/dispatch/: deserialize_casting.cpp  deserialize_casting.hpp  deserialize_meta.hpp
examples/serialization/: primitive_arrays.hpp  primitive_arrays.pb.h  primitives.hpp  primitives.pb.h  refl_serializer.hpp
examples/thread/: cmsis_thread.hpp
serialization/: CMakeLists.txt
serialization/cmake/: define_proto_serialization_benchmark.cmake  define_refl_serialization_benchmark.cmake
serialization/include/: refl_serializer.hpp  serialize_wrapper.hpp
serialization/include/idl/: basic.hpp  nested.hpp  primitives_array.hpp
serialization/proto/: basic.proto  nested.proto  primitive_arrays.proto  primitives.proto  primitives_array.proto
serialization/test/: CMakeLists.txt  basic_usage.cpp  fill_test_message.hpp  nested_benchmark.cpp  nested_benchmark_proto.cpp  primitive_arrays_benchmark.cpp  primitive_arrays_benchmark_proto.cpp  primitives_array_benchmark.cpp  primitives_array_benchmark_proto.cpp  primitives_benchmark.cpp  primitives_benchmark_proto.cpp  primitives_proto.cpp  proto_basic.cpp  serialize_rusage.cpp
type_dispatch/: CMakeLists.txt
type_dispatch/cmake/: define_deserialize_benchmark.cmake
type_dispatch/include/: deserialize_casting.hpp  deserialize_meta.hpp
type_dispatch/include/idl/: ack.hpp  bar.hpp  foo.hpp  header.hpp  message_types.hpp  source.hpp  user_data.hpp
type_dispatch/test/: CMakeLists.txt  deserialize_casting.cpp  deserialize_meta.cpp
